# plutonium-controller-launcher

./: Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
assets/: controller-nav.js
src/: gamepad.rs  main.rs  manifest.rs  patch.rs  updater.rs
