[package]
name = "plutonium-launcher"
version = "0.1.2"
edition = "2024"
description = "Plutonium updater + controller-navigable launcher replacement"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "2"
sha1 = "0.10"
hex = "0.4"
gilrs = { version = "0.10", default-features = false, features = ["xinput"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Foundation",
] }

[build-dependencies]
winresource = "0.1.31"

[[bin]]
name = "plutonium"
path = "src/main.rs"
